# Thesis

./: .gitmodules  README.md  Troubleshooting.md
Gripper/: .gitignore
Gripper/Assets/Materials/: Blue.mat  Green.mat  Navy.mat  NavyFloor.mat  Red.mat  Target.mat
Gripper/Assets/NN/: V15.onnx  V16.onnx  V18.onnx  V32.onnx  V33.onnx  V41a.onnx  V45c.onnx
Gripper/Assets/PhysicsMaterials/: GripperMaterial.physicMaterial  Slippery.physicMaterial  lego.physicMaterial
Gripper/Assets/Prefabs/: B222(Clone).prefab  Cube.prefab  Floor.prefab  Table.prefab  TargetPlacement.prefab
Gripper/Assets/Scenes/: BrickConnectivity.unity  GripperURDF.unity  test.unity
Gripper/Assets/Scripts/: Extensions.cs
Gripper/Assets/URDFs/: robotiq_hande.urdf
Gripper/ProjectSettings/: AudioManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
ROS/: .gitignore
ROS/src/brick_stacker/brick_stacker/: CMakeLists.txt  package.xml
ROS/src/robotiq/robotiq_hande_gripper_description/: CMakeLists.txt  package.xml
ROS/src/ur_hande/: .setup_assistant  CMakeLists.txt  package.xml
ROS/src/ur_moveit/: CMakeLists.txt  package.xml  setup.py
ROS/src/ur_urdf/: CMakeLists.txt  package.xml
UR/: UpgradeLog.htm
UR/Assets/: config.txt  msgbrowser_settings.asset
UR/Assets/Editor/: readonlyProperty.cs
UR/Assets/Materials/: BrightBlue.mat  BrightGreen.mat  BrightRed.mat  Green.mat  Navy.mat  Target.mat  White.mat
UR/Assets/PhysicsMaterials/: CubeMaterial.physicMaterial
UR/Assets/Prefabs/: Cube.prefab  Table.prefab  Table_I4.fbx  Target.prefab  robotiq_hande.prefab
UR/Assets/Resources/: ROSConnectionPrefab.prefab
UR/Assets/Scenes/: Cube.unity  (+2 more)
UR/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  InputManager.asset  ProjectSettings.asset  TagManager.asset
(+397 files in other folders)
