<?xml version="1.0"?>
<package format="2">
  <name>brick_stacker</name>
  <version>0.0.0</version>
  <description>The brick_stacker package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jeyanth@todo.todo">jeyanth</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur5e_hande</exec_depend>
  <exec_depend>ur5e_hande_moveit</exec_depend>
  <exec_depend>ur5e_hande_moveit_kdl</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
